# cosmetics-analyser

./: README.md  database.py  example_data.sql  load_csv_data.py  main.py  models.py  pyproject.toml
backend/: .gitignore  db.sqlite3  pyproject.toml  run.sh
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/api/: api.ts
frontend/src/app/: App.tsx  ProtectedRoute.tsx
frontend/src/components/: BarcodeScanner.tsx  CosmeticBasicInfoForm.tsx  CosmeticPreview.tsx  ImportCosingButton.tsx  IngredientSearchForm.tsx  ProtectedRoute.tsx  TestPage.tsx  Toolbar.tsx  barcodescanner.tsx  clean-score.tsx  composition-list.tsx  cosmetic-details.tsx  expert-opinions.tsx  homepage.tsx  ingredient-details.tsx  login-page.tsx  register-page.tsx  review-form.tsx  reviews-list.tsx  skin-survey.tsx  user-account.tsx
frontend/src/components/ui/: checkbox.tsx  modal.tsx
frontend/src/hooks/: use-toast.ts  useIsAdmin.ts
frontend/src/pages/: addCosmeticPage.tsx  cosmeticDetailsPage.tsx  cosmeticPage.tsx  editCosmeticPage.tsx  homePage.tsx  loginPage.tsx  notFoundPage.tsx  registerPage.tsx  userAccountPage.tsx
